[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/screens/WorldScene.gd" type="Script" id=1]
[ext_resource path="res://src/screens/chat.gd" type="Script" id=2]
[ext_resource path="res://src/screens/poppins_regular_400.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/screens/chatbox.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Chat" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="Chatbox" type="Node" parent="Chat"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="Chat/Chatbox"]
margin_left = 31.0
margin_top = 667.0
margin_right = 772.0
margin_bottom = 1043.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.607843 )

[node name="VBoxContainer" type="VBoxContainer" parent="Chat/Chatbox"]
margin_left = 51.0
margin_top = 691.0
margin_right = 752.0
margin_bottom = 929.0
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Chat/Chatbox/VBoxContainer"]
margin_right = 701.0
margin_bottom = 238.0
mouse_filter = 2
input_pass_on_modal_close_click = false
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 6 )
bbcode_enabled = true
scroll_following = true

[node name="chat" type="LineEdit" parent="Chat"]
margin_left = 53.0
margin_top = 959.0
margin_right = 616.0
margin_bottom = 1014.0
theme = SubResource( 2 )

[node name="submit" type="Button" parent="Chat"]
margin_left = 638.0
margin_top = 961.0
margin_right = 751.0
margin_bottom = 1013.0
theme = SubResource( 4 )
text = "Submit"

[connection signal="focus_exited" from="Chat/chat" to="Chat" method="_on_chat_focus_exited"]
[connection signal="text_changed" from="Chat/chat" to="Chat" method="_on_chat_text_changed"]
[connection signal="text_entered" from="Chat/chat" to="Chat" method="_on_chat_text_entered"]
[connection signal="pressed" from="Chat/submit" to="Chat" method="_on_submit_pressed"]
